[project]
name = "adaura_attenuator"
version = "0.0.1"
description = "An interface to Adaura Technologies Programmable RF Attenuators"
urls.Repository = "https://github.zhaw.ch/InES/AdauraAttenuator"
authors = [
  { name="supraconex", email="supraconex@supraconex.org" },
  { name="Flavio Felder", email="felf@zhaw.ch" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyserial",
    "requests",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
